update the Service

--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,9 @@ h6,
         opacity: 1;
     }
 }
-
+.bodyback{
+    background-image: url(../img/bodybg.png);
+}
 
 /*** Header ***/
 .owl-carousel-inner {
