--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,9 @@ h6,
     align-items: center;
     background: rgba(0, 0, 0, .5);
 }
+.customa_active{
+    background-color: #B78D65;
+}
 
 @media (max-width: 768px) {
     .header-carousel .owl-carousel-item {
