--- a/css/style.css
+++ b/css/style.css
@@ -556,3 +556,159 @@ h6,
 .footer .copyright a:hover {
     color: var(--primary);
 }
+.h-80{
+    height: 80% !important;
+}
+
+@media screen and  (min-width:1196px){
+    .fs-xl-1 {
+        font-size: calc(1.375rem + 1.5vw) !important
+    }
+    
+    .fs-xl-2 {
+        font-size: calc(1.325rem + .9vw) !important
+    }
+    
+    .fs-xl-3 {
+        font-size: calc(1.3rem + .6vw) !important
+    }
+    
+    .fs-xl-4 {
+        font-size: calc(1.275rem + .3vw) !important
+    }
+    
+    .fs-xl-5 {
+        font-size: 1.25rem !important
+    }
+    
+    .fs-xl-6 {
+        font-size: 1rem !important
+    }
+}
+@media only screen and (min-width: 992px) {
+    .fs-lg-1 {
+        font-size: calc(1.375rem + 1.5vw) !important
+    }
+    
+    .fs-lg-2 {
+        font-size: calc(1.325rem + .9vw) !important
+    }
+    
+    .fs-lg-3 {
+        font-size: calc(1.3rem + .6vw) !important
+    }
+    
+    .fs-lg-4 {
+        font-size: calc(1.275rem + .3vw) !important
+    }
+    
+    .fs-lg-5 {
+        font-size: 1.25rem !important
+    }
+    
+    .fs-lg-6 {
+        font-size: 1rem !important
+    }
+ 
+ 
+}
+@media only screen and (min-width: 768px) {
+    .fs-md-1 {
+        font-size: calc(1.375rem + 1.5vw) !important
+    }
+    
+    .fs-md-2 {
+        font-size: calc(1.325rem + .9vw) !important
+    }
+    
+    .fs-md-3 {
+        font-size: calc(1.3rem + .6vw) !important
+    }
+    
+    .fs-md-4 {
+        font-size: calc(1.275rem + .3vw) !important
+    }
+    
+    .fs-md-5 {
+        font-size: 1.25rem !important
+    }
+    
+    .fs-md-6 {
+        font-size: 1rem !important
+    }
+  
+ 
+}
+@media only screen and (min-width: 600px) {
+    .fs-sm-1 {
+        font-size: calc(1.375rem + 1.5vw) !important
+    }
+    
+    .fs-sm-2 {
+        font-size: calc(1.325rem + .9vw) !important
+    }
+    
+    .fs-sm-3 {
+        font-size: calc(1.3rem + .6vw) !important
+    }
+    
+    .fs-sm-4 {
+        font-size: calc(1.275rem + .3vw) !important
+    }
+    
+    .fs-sm-5 {
+        font-size: 1.25rem !important
+    }
+    
+    .fs-sm-6 {
+        font-size: 1rem !important
+    }
+    .header-carousel .owl-carousel-item {
+        position: relative;
+        min-height: 300px;
+    }
+
+}
+@media screen and (max-width :600px) {
+    .header-carousel .owl-dots {
+        display: none !important ;
+    }
+    .header-carousel .owl-carousel-item {
+        position: relative;
+        min-height: 350px;
+    }
+
+}
+@media only screen and (max-width: 450px){
+    .fs-xs-1 {
+        font-size: calc(1.4rem + 1.5vw)  !important
+    }
+    
+    .fs-xs-2 {
+        font-size: calc(0.8rem + .5vw)!important
+    }
+    
+    .fs-xs-3 {
+        font-size:calc(0.6rem + .2vw)!important
+    }
+    
+    .fs-xs-4 {
+        font-size: calc(0.8rem + .1vw ) !important
+    }
+    
+    .fs-xs-5 {
+        font-size: 0.4rem !important
+    }
+    
+    .fs-xs-6 {
+        font-size: 0.2rem !important
+    }
+    .d-xs-none{
+        display: none !important;
+    }
+    .header-carousel .owl-carousel-item {
+        position: relative;
+        min-height: 300px;
+    }
+}
+
