--- a/css/style.css
+++ b/css/style.css
@@ -237,8 +237,12 @@ h6,
 }
 
 .page-header {
-    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgb(0, 0, 0) 0%, rgba(194, 151, 103, 0.836) ), url(../img/business-man-financial-inspector-secretary-making-report-calculating-checking-balance-internal-revenue-service-inspector-checking-document-audit-concept-1.jpg) center center no-repeat;
     background-size: cover;
+    /* background-color: #e6c79c;
+background-image: linear-gradient(315deg, #e6c79c 0%, #d6a3a3 74%); */
+
+
 }
 
 .breadcrumb-item+.breadcrumb-item::before {
@@ -328,11 +332,17 @@ h6,
 
 .service-item .service-text {
     background: var(--light);
+    color:var(--dark);
     transition: .5s;
+}
+.points_style {
+    box-shadow: 3px 3px 3px 3px gray;
+    padding: 1rem; 
+    border-left: 5px solid #3e2309;
 }
 
 .service-item:hover .service-text {
-    background: rgba(0, 0, 0, .7);
+    background: var(--primary);
 }
 
 .service-item * {
@@ -373,6 +383,36 @@ h6,
 .project .nav .nav-link.active h3 {
     color: #FFFFFF !important;
 }
+/* Advantage text */
+.adv-item{
+    padding: .75rem;
+}
+.text-convert{
+    z-index: 2;
+    color: var(--dark);
+}
+.text-convert{
+    color:black;
+    background: white;
+}
+.adv-item::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0;
+    top: 0;
+    left: 0;
+    background: rgb(0, 0, 0);
+    transition: .5s;
+    z-index: -1;
+}
+.adv-item:hover::after {
+    height: 100%;
+    background: var(--primary);
+}
+
+
+
 
 
 /*** Team ***/
