--- a/css/style.css
+++ b/css/style.css
@@ -241,8 +241,14 @@ h6,
     background-size: cover;
     /* background-color: #e6c79c;
 background-image: linear-gradient(315deg, #e6c79c 0%, #d6a3a3 74%); */
-
-
+}
+.fact-header {
+    background: url(../img/linestep1.png) center center no-repeat;
+    background-size: contain ;
+   
+    background-repeat: no-repeat;
+    /* background-color: #e6c79c;
+background-image: linear-gradient(315deg, #e6c79c 0%, #d6a3a3 74%); */
 }
 
 .breadcrumb-item+.breadcrumb-item::before {
@@ -257,7 +263,14 @@ background-image: linear-gradient(315deg, #e6c79c 0%, #d6a3a3 74%); */
     letter-spacing: 5px;
     text-transform: uppercase;
 }
+.service-text:hover .icon-show{
 
+    padding: 1rem;
+    border-radius: 50% !important;
+    background: #ffffff;
+    transition: .5s ease-out;
+    
+}
 
 /*** Facts ***/
 .fact-item .fact-icon {
@@ -270,11 +283,12 @@ background-image: linear-gradient(315deg, #e6c79c 0%, #d6a3a3 74%); */
     justify-content: center;
     background: #FFFFFF;
     border-radius: 120px;
+    border:3px solid #3e2309;
     transition: .5s;
 }
 
 .fact-item:hover .fact-icon {
-    background: var(--dark);
+    background: var(--primary);
 }
 
 .fact-item .fact-icon i {
@@ -411,7 +425,9 @@ background-image: linear-gradient(315deg, #e6c79c 0%, #d6a3a3 74%); */
     background: var(--primary);
 }
 
-
+.carousel-item{
+    transition: transform .3s ease-in-out !important;
+}
 
 
 
@@ -600,6 +616,29 @@ background-image: linear-gradient(315deg, #e6c79c 0%, #d6a3a3 74%); */
     height: 80% !important;
 }
 
+/* Clients Images Style Start */
+.custom_slide img{
+    width: 150px;
+    height: auto;;
+    animation-delay: 0.1s;
+    animation: scroll 10s linear infinite  ;
+}
+
+.custom_slide-track {
+    width: 70%;
+    height:5rem;
+    margin:auto;
+    gap: 1rem;
+    overflow: hidden;
+  }
+  
+  @keyframes scroll {
+    0% {transform: translateX(0);}
+    100% {transform: translateX(500%)}
+  }
+  /* Client Images Style End */
+
+
 @media screen and  (min-width:1196px){
     .fs-xl-1 {
         font-size: calc(1.375rem + 1.5vw) !important
@@ -705,7 +744,8 @@ background-image: linear-gradient(315deg, #e6c79c 0%, #d6a3a3 74%); */
     }
     .header-carousel .owl-carousel-item {
         position: relative;
-        min-height: 300px;
+        min-height: 350px;
+        max-height: 500px;
     }
 
 }
